[package]
name = "identity"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"

[dependencies]
blake3 = "0.3.3"
uuid = { version = "0.8.1", features = ["serde", "v5"] }
serde = "1.0.110"
serde_bytes = "0.11.4"
arrayref = "0.3.6"
cdrs = { git = "https://github.com/AlexPikalov/cdrs", branch = "async-tokio" }

[lib]
name = "swaply_identity"
path = "src/lib.rs"

