[package]
name = "identity"
version = "0.1.0"
authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
edition = "2018"

[dependencies]
blake3 = "0.3.3"
uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }
serde = "1.0.110"
serde_bytes = "0.11.4"
arrayref = "0.3.6"
cdrs = "3.0.0-beta.2"
cdrs_helpers_derive = "0.3.3"
time = { version = "0.1.43" }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
tokio = "0.2.20"
futures-util = "0.3.5"
bincode = "1.2.1"
bs58 = "0.3.1"
jsonwebtoken = "7.1.0"
async-trait = "0.1.33"

[lib]
name = "swaply_identity"
path = "src/lib.rs"

